--- a/public/themes/simpleboot3/public/assets/style/css/news.css
+++ b/public/themes/simpleboot3/public/assets/style/css/news.css
@@ -24,7 +24,7 @@
 	line-height: 1.07rem;
 	background-color: rgba(250, 250, 250, 1);
 	display: flex;
-	flex-direction: column;
+	/* flex-direction: column; */
 	align-items: center;
 }
 .news .type{
@@ -190,9 +190,10 @@
 	}
 	.news .type{
 		width: auto;
-		display: flex;
+		/* display: flex; */
 		flex-wrap: nowrap;
-		text-align: center;
+		flex-direction: row;
+		/* text-align: center; */
 		font-size: 0.93rem;
 		margin-bottom: 0;
 	}
