--- a/public/themes/simpleboot3/public/assets/style/css/product.css
+++ b/public/themes/simpleboot3/public/assets/style/css/product.css
@@ -155,6 +155,9 @@
 	margin-right: 0.18rem;
 	color: rgba(255, 255, 255, 1);
 }
+.product_img{
+	display: none;
+}
 /* 我们的优势 */
 .ouradvantage{
 	background-image: url(../imgs/solution/resolve3.png);
@@ -335,37 +338,31 @@
 @media (max-width : 425px) {
 	.product .banner {
 	    width: 100%;
-	    height: 12.5rem;
+	    height: 13.33rem;
 	    background-image: url(../imgs/product/banner.png);
 	    background-repeat: no-repeat;
 	    background-size: cover;
 	    overflow: hidden;
 	    position: relative;
-	    display: flex;
-	    flex-direction: column;
 	}
 	
 	.product_banner_text_one {
-	    margin-top: 3.928571rem;
-	    margin-left: 4.375rem;
+		margin-left: 0;
+		width: 100%;
+	    margin-top: 6rem;
 	    color: rgba(255, 255, 255, 1);
-	    font-size: 1.2rem;
-	    text-align: left;
+	    font-size: 1.6rem;
+	    text-align: center;
 	    font-weight: bold;
 	}
 	
 	.product_banner_text_two {
-	    margin-top: 0.892857rem;
-	    margin-left: 4.375rem;
-	    width: 12.5rem;
-	    line-height: 1.25rem;
-	    color: rgba(255, 255, 255, 1);
-	    font-size: 0.93rem;
+		display: none;
 	}
 	
 	/* 客户的难题 */
 	.product .problem {
-	    padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+	    padding: 2rem 1rem 2rem 1rem;
 	    background-color: #FAFAFA;
 	    display: flex;
 	    align-items: center;
@@ -374,29 +371,31 @@
 	
 	.problem .title {
 	    color: rgba(16, 16, 16, 1);
-	    font-size: 1.13rem;
+	    font-size: 1.2rem;
 	    text-align: center;
 	    font-weight: bold;
 	}
 	
 	.problem .tag {
-	    margin-top: 0.357143rem;
+	    margin-top: 1rem;
 	    color: rgba(153, 153, 153, 1);
-	    font-size: 0.75rem;
+	    font-size: 0.8rem;
 	    text-align: center;
 	}
 	
 	.problem .list {
 		width: 100%;
-	    margin-top: 1.428571rem;
+	    margin-top: 2rem;
 	    display: flex;
 	    justify-content: space-between;
+	    flex-wrap: wrap;
 	}
 	
 	.problem .list .item {
+		margin-bottom: 0.33rem;
 	    display: flex;
-	    width: 24%;
-	    border-radius: 0.09rem;
+	    width: 49%;
+	    border-radius: 0.33rem;
 	    background-repeat: no-repeat;
 	    background-size: cover;
 	}
@@ -404,31 +403,31 @@
 	.problem .list .item .item_content {
 	    width: 100%;
 	    opacity: 0.9;
-	    border-radius: 0.09rem;
+	    border-radius: 0.33rem;
 	    display: flex;
 	    flex-direction: column;
 	    background-color: rgba(250, 250, 250, 1);
-	    padding: 0.89rem 0.54rem 0.71rem 0.54rem;
+	    padding: 1rem;
 	}
 	
 	.problem .list .item_title {
 	    color: rgba(255, 80, 0, 1);
-	    font-size: 0.88rem;
+	    font-size: 1.07rem;
 	    text-align: left;
 	    font-weight: bold;
 	}
 	
 	.problem .list .item_des {
 	    width: 100%;
-	    margin-top: 1.07rem;
-	    line-height: 0.88rem;
-	    color: rgba(51, 51, 51, 1);
-	    font-size: 0.75rem;
-	    text-align: justify;
+	    margin-top: 1rem;
+	    line-height: 1.33rem;
+		color: rgba(102, 102, 102, 1);
+		font-size: 0.87rem;
+		text-align: justify;
 	}
 	/* 我们的产品 */
 	.ourproduct{
-		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		padding: 2rem 1rem 1.33rem 1rem;
 		background-color: #FFFFFF;
 		display: flex;
 		align-items: center;
@@ -447,77 +446,80 @@
 		width: 100%;
 	}
 	.ourproduct_left_text{
-		margin-top: 0.89rem;
+		margin-top: 2rem;
 		width: 100%;
-		line-height: 0.88rem;
+		line-height: 1.6rem;
 		color: rgba(46, 46, 46, 1);
-		font-size: 0.75rem;
+		font-size: 0.87rem;
 		text-align: justify;
 	}
 	.ourproduct_left_title {
 	    color: rgba(16, 16, 16, 1);
-	    font-size: 1.13rem;
+	    font-size: 1.2rem;
 	    text-align: left;
 	    font-weight: bold;
 	}
 	
 	.ourproduct_left_tag {
-	    margin-top: 0.36rem;
+	    margin-top: 1rem;
 	    color: rgba(153, 153, 153, 1);
-	    font-size: 0.75rem;
+	    font-size: 0.8rem;
 	    text-align: left;
 	}
 	.ourproduct button{
-		margin-top: 1.79rem;
-		width: 6.25rem;
-		height: 1.76rem;
-		line-height: 1.76rem;
-		border-radius: 0.31rem;
-		background-color: rgba(255, 80, 0, 1);
-		text-align: center;
 		color: rgba(255, 255, 255, 1);
-		font-size: 0.25rem;
+		font-size: 0.93rem;
 		border: 0;
 		display: flex;
 		align-items: center;
+		width: 23rem;
+		height: 3.33rem;
+		line-height: 3.33rem;
+		border-radius: 0.33rem;
+		background-color: rgba(255, 80, 0, 1);
+		text-align: center;
 	}
 	.ourproduct button img{
-		margin-left: 0.6rem;
-		width: 1rem;
-		height: 1rem;
-		margin-right: 0.18rem;
+		margin-left: 8.67rem;
+		width: 1.2rem;
+		height: 1.2rem;
+		margin-right: 0.67rem;
 		color: rgba(255, 255, 255, 1);
+	}
+	.product_img{
+		display: block;
+		width: 100%;
+		background-color: #FFFFFF;
 	}
 	/* 我们的优势 */
 	.ouradvantage{
-		background-image: url(../imgs/solution/resolve3.png);
+		background-image: url(../imgs/product/advantage_back.png);
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
 	.ouradvantage_content{
-		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		padding: 2rem 1rem 0 1rem;
 		background-color: rgba(250, 250, 250, 1);
 		display: flex;
 		align-items: center;
 		flex-direction: column;
-		opacity: 0.9;
 	}
 	.ouradvantage_content .title {
 	    color: rgba(16, 16, 16, 1);
-	    font-size: 1.13rem;
+	    font-size: 1.2rem;
 	    text-align: center;
 	    font-weight: bold;
 	}
 	
 	.ouradvantage_content .tag {
-	    margin-top: 0.357143rem;
+	    margin-top: 1rem;
 	    color: rgba(153, 153, 153, 1);
-	    font-size: 0.75rem;
+	    font-size: 0.8rem;
 	    text-align: center;
 	}
 	.ouradvantage_content .list {
 		width: 100%;
-	    margin-top: 1.79rem;
+	    margin-top: 3.33rem;
 	    display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
@@ -525,53 +527,55 @@
 	
 	.ouradvantage_content .list .item{
 		width: 48%;
-		height: 8rem;
-		border-radius: 0.25rem;
+		height: 10rem;
+		border-radius: 0.33rem;
 		background-color: rgba(255, 255, 255, 1);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin-bottom: 1.25rem;
+		margin-bottom: 4rem;
 	}
 	.ouradvantage_content .list .item .item_first{
-		margin-top: -0.98rem;
-	    width: 1.96rem;
-	    height: 1.96rem;
-	    line-height: 1.96rem;
+		margin-top: -2.67rem;
+	    width: 5.33rem;
+	    height: 5.33rem;
+	    line-height: 5.33rem;
 	    border-radius: 50%;
 	    background-color: rgba(255, 255, 255, 1);
 	}
 	.ouradvantage_content .list .item .item_first .item_first_content{
-		margin-left: 0.18rem;
-		margin-top: 0.18rem;
-	    width: 1.61rem;
-	    height: 1.61rem;
-	    line-height: 1.61rem;
+		margin-left: 0.5rem;
+		margin-top: 0.5rem;
+	    width: 4.33rem;
+	    height: 4.33rem;
+	    line-height: 4.33rem;
 	    border-radius: 50%;
 	    background-color: #FAFAFA;
 		text-align: center;
 	}
 	.item_first .item_first_content img{
-	    width: 0.71rem;
-	    height: 0.71rem;
+	    width: 2rem;
+	    height: 2rem;
 	}
 	.ouradvantage_content .list .item .item_title{
-		margin-top: 0.54rem;
+		margin-top: 1.00rem;
 		color: rgba(51, 51, 51, 1);
-		font-size: 0.88rem;
+		font-size: 1.07rem;
 		text-align: center;
 		font-weight: bold;
 	}
 	.ouradvantage_content .list .item .item_des{
-		margin-top: 0.36rem;
+		width: 90%;
+		margin-top: 1rem;
 		color: rgba(153, 153, 153, 1);
-		font-size: 0.75rem;
-		text-align: center;
+		font-size: 0.87rem;
+		line-height: 1.53rem;
+		text-align: left;
 	}
 	
 	/* 我们的价值 */
 	.ourvalue{
-		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		padding: 2rem 1rem 2rem 1rem;
 		background-color: #FFFFFF;
 		display: flex;
 		align-items: center;
@@ -579,14 +583,14 @@
 	}
 	.ourvalue .title {
 	    color: rgba(16, 16, 16, 1);
-	    font-size: 1.13rem;
+	    font-size: 1.2rem;
 	    text-align: center;
 	    font-weight: bold;
 	}
 	.ourvalue .tag {
-	    margin-top: 0.357143rem;
+	    margin-top: 1rem;
 	    color: rgba(153, 153, 153, 1);
-	    font-size: 0.75rem;
+	    font-size: 0.8rem;
 	    text-align: center;
 	}
 	.ourvalue .list {
@@ -594,50 +598,52 @@
 	    margin-top: 1.79rem;
 	    display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
 	}
 	
 	.ourvalue .list .item{
-		width: 24%;
-		height: 17rem;
-		border-radius: 0.09rem;
+		width: 100%;
+		border-radius: 0.33rem 0.33rem 0px 0px;
 		background-color: #FAFAFA;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		margin-bottom: 1rem;
+		height: 18.67rem;
 	}
 	.ourvalue .list .item .item_first{
 		background-image: url(../imgs/solution/resolve3.png);
 		background-repeat: no-repeat;
 		background-size: cover;
-		border-radius: 0.09rem 0.09rem 0 0;
+		border-radius: 0.33rem 0.33rem 0px 0px;
 		width: 100%;
-	    height: 4.00rem;
+	    height: 10.67rem;
 	}
 	.ourvalue .list .item .item_first .item_first_content{
-		margin-top: 2.9rem;
+		margin-top: 6.93rem;
 		width: 100%;
-		height: 1.07rem;
-		line-height: 1.07rem;
+		height: 3.73rem;
+		line-height: 3.73rem;
 		background: linear-gradient(90.17deg, rgba(255,80,0,1) -0.15%,rgba(255,80,0,0.27) 99.55%);
 		text-align: center;
 	}
 	.item_first_content_text{
+		margin-left: 1.33rem;
 		color: rgba(255, 255, 255, 1);
-		font-size: 0.75rem;
+		font-size: 1.07rem;
 		text-align: left;
-		margin-left: 0.45rem;
 	}
 	.ourvalue .list .item .item_des{
-		margin-top: 0.54rem;
+		padding: 1.33rem 1rem 1.87rem 1rem;
 		width: 100%;
 		color: rgba(102, 102, 102, 1);
-		font-size: 0.75rem;
+		font-size: 0.87rem;
 		text-align: justify;
-		line-height: 1.25rem;
+		line-height: 1.6rem;
 	}
 	/* 以人为本 */
 	.getresolve{
-		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		padding: 2rem 1rem 2rem 1rem;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -645,26 +651,28 @@
 	}
 	.getresolve .title {
 	    color: rgba(16, 16, 16, 1);
-	    font-size: 1.13rem;
+	    font-size: 1.2rem;
 	    text-align: center;
 	    font-weight: bold;
 	}
 	.getresolve .tag {
-	    margin-top: 0.357143rem;
+	    margin-top: 1rem;
+		width: 22.67rem;
 	    color: rgba(153, 153, 153, 1);
-	    font-size: 0.75rem;
+	    font-size: 0.8rem;
+		line-height: 1.33rem;
 	    text-align: center;
 	}
 	.getresolve button{
-		margin-top: 1.43rem;
-		width: 7.2rem;
-		height: 1.76rem;
-		line-height: 1.76rem;
-		border-radius: 0.25rem;
+		margin-top: 2.67rem;
+		width: 23rem;
+		height: 3.6rem;
+		line-height: 3.6rem;
+		border-radius: 0.33rem;
 		background-color: rgba(255, 80, 0, 1);
 		text-align: center;
 		color: rgba(255, 255, 255, 1);
-		font-size: 0.75rem;
+		font-size: 0.93rem;
 		border: 0;
 	}
 }
