--- a/public/themes/simpleboot3/public/assets/style/css/solution.css
+++ b/public/themes/simpleboot3/public/assets/style/css/solution.css
@@ -212,6 +212,9 @@
 	text-align: left;
 	border-radius: 0.089286rem;
 }
+.solution_advantage .list .item{
+	display: none;
+}
 .list .content .content_left{
 	color: rgba(255, 80, 0, 1);
 	font-size: 0.857143rem;
@@ -229,6 +232,9 @@
 	padding: 2.142857rem 4.375rem 2.142857rem 4.375rem;
 	display: flex;
 	align-items: center;
+}
+.resolve_btn{
+	display: none;
 }
 .resolve_left{
 	display: flex;
@@ -299,40 +305,40 @@
 /* 合作客户 */
 .solution_customer{
 	background-color: #FAFAFA;
-	padding: 2rem 1rem 2.67rem 1rem;
+	padding: 1.79rem 4.38rem 1.79rem 4.38rem;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 }
 .solution_customer .title{
 	color: rgba(16, 16, 16, 1);
-	font-size: 1.2rem;
+	font-size: 0.57rem;
 	text-align: center;
 	font-weight: bold;
 }
 .solution_customer .tag{
-	margin-top: 1rem;
+	margin-top: 0.36rem;
 	color: rgba(153, 153, 153, 1);
-	font-size: 0.8rem;
+	font-size: 0.25rem;
 	text-align: center;
 }
 .solution_customer .list{
-	margin-top: 1rem;
+	margin-top: 1.43rem;
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
 	justify-content: space-between;
 }
 .solution_customer .list img{
-	width: 7.33rem;
-	height: 3.73rem;
-	margin-bottom: 0.33rem;
+	width: 4.11rem;
+	height: 1.79rem;
+	margin-bottom: 0.18rem;
 }
 .solution_customer .next{
 	color: rgba(255, 80, 0, 1);
-	font-size: 0.93rem;
+	font-size: 0.25rem;
 	text-align: center;
-	margin-top: 1.47rem;
+	margin-top: 0.89rem;
 }
 .resolve_right .span{
 	width: 6.25rem;
@@ -351,7 +357,7 @@
 @media (max-width : 425px) {
  	.solution .banner{
 		width: 100%;
-		height: 13.33rem;
+		height: 16.67rem;
 		background-image: url(../imgs/solution/banner.png);
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -361,18 +367,19 @@
 		align-items: center;
 	}
 	.solution_banner_text_one{
-		margin-top: 6rem;
+		margin-top: 7.33rem;
 		color: rgba(255, 255, 255, 1);
 		font-size: 1.2rem;
 		font-weight: bold;
 	}
 	.solution_banner_text_two{
+		display: none;
 		color: rgba(255, 255, 255, 1);
 		font-size: 0.93rem;
 	}
 	/* 方案定位 */
 	.solution .plan{
-		padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+		padding: 2rem 1rem 2rem 1rem;
 		background-color: #FFFFFF;
 		display: flex;
 		align-items: center;
@@ -385,21 +392,25 @@
 		font-weight: bold;
 	}
 	.plan .tag{
-		margin-top: 0.357143rem;
+		margin-top: 1rem;
 		color: rgba(153, 153, 153, 1);
 		font-size: 0.8rem;
 		text-align: center;
 	}
+	.plan .inner{
+		width: 23rem;
+	}
 	.plan .content{
-		margin-top: 1.428571rem;
+		width:23rem;
+		margin-top: 2rem;
 		display: flex;
+		align-items: center;
+		flex-direction: column;
 	}
 	.plan .content .content_left{
-		flex: 1;
 		width: 100%;
 	}
 	.plan .content .content_right{
-		flex: 0;
 		width: 100%;
 	}
 	.plan .content .content_left .content_left_text{
@@ -407,14 +418,16 @@
 		color: rgba(46, 46, 46, 1);
 		font-size: 0.87rem;
 		text-align: justify;
-		line-height: 1.33rem;
+		line-height: 1.6rem;
 	}
 	.plan .content .content_right img{
-		display: none;
+		margin-top: 1rem;
+		width: 23rem;
+		height: 10.93rem;
 	}
 	/* 服务目标 */
 	.solution .target{
-		padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+		padding: 2rem 1rem 2.67rem 1rem;
 		background-color: #FAFAFA ;
 		display: flex;
 		align-items: center;
@@ -427,8 +440,7 @@
 		font-weight: bold;
 	}
 	.target .tag{
-		margin-top: 1.33rem;
-		margin-bottom: 0.67rem;
+		margin-top: 1rem;
 		color: rgba(153, 153, 153, 1);
 		font-size: 0.8rem;
 		text-align: center;
@@ -440,39 +452,42 @@
 		justify-content: space-between;
 	}
 	.target_list .item{
-		width: 40%;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin-top: 0.67rem;
+		margin-top: 2rem;
 	}
 	.target_list .item .item_target_item_left{
-		flex: 0;
+		width: 100%;
+		height: 12.93rem;
 	}
 	.target_list .item .item_target_item_left img{
-		display: none;
+		width: 100%;
+		height: 12.93rem;
+		border-radius: 0.33rem;
 	}
 	.target .content{
+		margin-top: 1.33rem;
 		width: 100%;
-		flex: 1;
 	}
 	.target .content .content_top{
 		color: rgba(51, 51, 51, 1);
-		font-size: 0.93rem;
-		text-align: center;
+		font-size: 1.07rem;
+		text-align: left;
 		font-weight: bold;
 	}
 	.target .content .content_des{
-		margin-top: 1.33rem;
+		margin-top: 0.67rem;
 		width: 100%;
-		line-height: 1.33rem;
+		line-height: 1.6rem;
 		color: rgba(102, 102, 102, 1);
-		font-size: 0.8rem;
+		font-size: 0.87rem;
 		text-align: justify;
 	}
 	/* 服务内容 */
 	.solution .substance{
-		padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+		padding: 2rem 1rem 2rem 1rem;
 		background-color: #FFFFFF ;
 		display: flex;
 		align-items: center;
@@ -485,11 +500,11 @@
 		font-weight: bold;
 	}
 	.substance .tag{
-		margin-top: 0.67rem;
+		margin-top: 1rem;
 		color: rgba(153, 153, 153, 1);
 		font-size: 0.8rem;
 		text-align: center;
-		margin-bottom: 0.67rem;
+		margin-bottom: 2rem;
 	}
 	.substance_list{
 		display: flex;
@@ -497,32 +512,30 @@
 		width: 100%;
 	}
 	.substance_list .item{
-		width: 46%;
-		height: 3.214286rem;
+		width: 100%;
+		height: 6.67rem;
 		display: flex;
 		align-items: center;
-		margin-left: 2%;
-		margin-right: 2%;
-		margin-top: 0.67rem;
+		margin-bottom: 0.67rem;
 		background: #FAFAFA;
 		text-align: center;
 		border-radius: 0.33rem;
 	}
 	.substance_list .item img{
-		margin-left: 2.142857rem;
-		width: 1rem;
-		height: 1rem;
+		margin-left: 6.4rem;
+		width: 2.67rem;
+		height: 2.67rem;
 	}
 	.substance .content{
-		margin-left: 0.357143rem;
+		margin-left: 1rem;
 		color: rgba(51, 51, 51, 1);
-		font-size: 0.8rem;
+		font-size: 1.07rem;
 		text-align: center;
 		font-weight: bold;
 	}
 	/* 我们的优势 */
 	.solution .solution_advantage{
-		padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+		padding: 2rem 1rem 2rem 1rem;
 		display: flex;
 		align-items: center;
 		flex-direction: column;
@@ -534,7 +547,7 @@
 		font-weight: bold;
 	}
 	.solution_advantage .tag{
-		margin-top: 0.8rem;
+		margin-top: 1rem;
 		color: rgba(153, 153, 153, 1);
 		font-size: 0.8rem;
 		text-align: center;
@@ -542,35 +555,41 @@
 	}
 	.solution_advantage .list{
 		display: flex;
-		flex-direction: column;
+		justify-content: space-between;
+		flex-wrap: wrap;
 		width: 100%;
 	}
 	.solution_advantage .list .content{
-		margin-left: 4rem;
-		width: 100%;
-		height: 2.67rem;
-		display: flex;
-		align-items: center;
-		margin-top: 1rem;
-		text-align: left;
-		border-radius: 0.089286rem;
+		display: none;
 	}
-	.list .content .content_left{
+	.solution_advantage .list .item{
+		margin-bottom: 0.67rem;
+		width: 47%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.solution_advantage .list .item .item_top{
+		width: 100%;
 		color: rgba(255, 80, 0, 1);
-		font-size: 2rem;
+		font-size: 1.33rem;
+		text-align: center;
 		font-weight: bold;
 	}
-	.list .content .content_right{
-		margin-left: 0.33rem;
-		color: rgba(51, 51, 51, 1);
-		font-size: 0.8rem;
-		text-align: left;
+	.solution_advantage .list .item .item_des{
+		margin-top: 1.33rem;
+		width: 100%;
+		color: rgba(153, 153, 153, 1);
+		font-size: 0.87rem;
+		text-align: center;
+		line-height: 1.33rem;
 	}
 	/* 解决方案 */
 	.solution .resolve{
 		background-color: #FFFFFF;
-		padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+		padding: 2rem 1rem 2rem 1rem;
 		display: flex;
+		flex-direction: column;
 		align-items: center;
 	}
 	.resolve_left{
@@ -585,57 +604,72 @@
 		font-weight: bold;
 	}
 	.resolve_left_tag{
-		margin-top: 0.357143rem;
+		margin-top: 1rem;
 		color: rgba(153, 153, 153, 1);
 		font-size: 0.8rem;
 		text-align: left;
+		margin-bottom: 2.67rem;
 	}
 	.resolve_left button{
-		margin-top: 1.071429rem;
-		width: 8.00rem;
-		height: 2rem;
-		line-height: 2rem;
-		border-radius: 0.27rem;
-		background-color: rgba(255, 80, 0, 1);
-		text-align: center;
-		color: rgba(255, 255, 255, 1);
-		font-size: 0.8rem;
-		border: 0;
+		display: none;
 	}
 	.resolve_right{
-		display: none;
+		width: 100%;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
 	}
 	.resolve_right_item{
 		background-repeat: no-repeat;
 		background-size: cover;
-		margin-right: 0.089286rem;
-		width: 4.107143rem;
-		height: 3.214286rem;
-		border-radius: 0.089286rem;
+		width: 100%;
+		height: 8rem;
+		border-radius: 0.33rem;
+		margin-bottom: 0.67rem;
 	}
 	.resolve_right_item .resolve_right_content{
-		width: 6.00rem;
-		height: 3.50rem;
-		opacity: 0;
+		width: 100%;
+		height: 8rem;
+		opacity: 0.9;
 		border-radius: 0.33rem;
+		line-height: 8rem;
 		background-color: rgba(250, 250, 250, 1);
 	}
 	.resolve_right_item.active{
-		width: 6.00rem;
+		background-repeat: no-repeat;
+		background-size: cover;
+		width: 100%;
+		height: 8rem;
 		border-radius: 0.33rem;
-	}
-	.resolve_right_item.active .resolve_right_content{
-		opacity: 0.9;
+		margin-bottom: 0.67rem;
 	}
 	.resolve_right_item .resolve_right_content .text{
 		color: #ff5000;
-		font-size: 0.25rem;
+		font-size: 1.07rem;
 		text-align: center;
-		display: none;
-		line-height:3.214286rem;
+		line-height: 8rem;
+		font-weight: bold;
+		display: block;
 	}
 	.resolve_right_item.active .resolve_right_content .text{
+		color: #ff5000;
+		font-size: 1.07rem;
+		text-align: center;
+		line-height: 8rem;
+		font-weight: bold;
+	}
+	.resolve_btn{
 		display: block;
+		margin-top: 1.33rem;
+		width: 23rem;
+		height: 3.6rem;
+		line-height: 3.6rem;
+		border-radius: 0.33rem;
+		background-color: rgba(255, 80, 0, 1);
+		text-align: center;
+		color: rgba(255, 255, 255, 1);
+		font-size: 0.93rem;
+		border: 0;
 	}
 	/* 合作客户 */
 	.solution_customer{
