--- a/public/themes/simpleboot3/public/assets/style/css/product.css
+++ b/public/themes/simpleboot3/public/assets/style/css/product.css
@@ -71,12 +71,12 @@
 }
 
 .problem .list .item .item_content {
-    width: 100%;
+    /* width: 100%;
     opacity: 0.9;
     border-radius: 0.09rem;
     display: flex;
     flex-direction: column;
-    background-color: rgba(250, 250, 250, 1);
+    background-color: rgba(250, 250, 250, 1); */
     padding: 0.89rem 0.54rem 0.71rem 0.54rem;
 }
 
@@ -274,12 +274,28 @@
 	align-items: center;
 }
 .ourvalue .list .item .item_first{
-	background-image: url(../imgs/solution/resolve3.png);
+	/* background-image: url(../imgs/solution/resolve3.png);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: cover; */
 	border-radius: 0.09rem 0.09rem 0 0;
 	width: 100%;
     height: 2.86rem;
+}
+.ourvalue .list .item:first-child .item_first{
+	background: url(../imgs/product/advance/1.png) center center no-repeat;
+	background-size: 100% 100%;
+}
+.ourvalue .list .item:nth-child(2) .item_first{
+	background: url(../imgs/product/advance/2.png) center center no-repeat;
+	background-size: 100% 100%;
+}
+.ourvalue .list .item:nth-child(3) .item_first{
+	background: url(../imgs/product/advance/3.png) center center no-repeat;
+	background-size: 100% 100%;
+}
+.ourvalue .list .item:nth-child(4) .item_first{
+	background: url(../imgs/product/advance/4.png) center center no-repeat;
+	background-size: 100% 100%;
 }
 .ourvalue .list .item .item_first .item_first_content{
 	margin-top: 1.79rem;
@@ -296,8 +312,9 @@
 	margin-left: 0.45rem;
 }
 .ourvalue .list .item .item_des{
-	margin-top: 0.54rem;
-	width: 100%;
+	/* margin-top: 0.54rem; */
+	/* width: 100%; */
+	padding: 0.53rem 0.44rem 0;
 	color: rgba(102, 102, 102, 1);
 	font-size: 0.25rem;
 	text-align: justify;
@@ -401,12 +418,12 @@
 	}
 	
 	.problem .list .item .item_content {
-	    width: 100%;
+	   /* width: 100%;
 	    opacity: 0.9;
 	    border-radius: 0.33rem;
 	    display: flex;
 	    flex-direction: column;
-	    background-color: rgba(250, 250, 250, 1);
+	    background-color: rgba(250, 250, 250, 1); */
 	    padding: 1rem;
 	}
 	
