--- a/public/themes/simpleboot3/public/assets/style/css/solution.css
+++ b/public/themes/simpleboot3/public/assets/style/css/solution.css
@@ -293,7 +293,8 @@
 }
 .resolve_right_item .resolve_right_content .text{
 	color: #ff5000;
-	font-size: 0.25rem;
+	font-size: 0.28rem;
+	font-weight: bolder;
 	text-align: center;
 	display: none;
 	line-height:3.214286rem;
