--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -2278,18 +2278,21 @@ body {
 
     .index-customer .index-customer-box {
         margin-top: 2rem;
-        height: 8.13rem;
+        height: 10.26rem;
         overflow: hidden;
     }
 
     .index-customer .index-customer-box div {
         width: calc(33.33% - 7.5px);
-        height: 3.73rem;
+        height: 4.8rem;
         margin-bottom: 0.66rem;
+		margin-right: 0.66rem;
     }
-
+	.index-customer .index-customer-box div:nth-child(3n+3){
+		margin-right: 0;
+	}
     .index-customer .index-customer-box div img {
-        height: 3.73rem;
+        height: 4.8rem;
     }
 
     .index-customer .more {
