--- a/public/themes/simpleboot3/public/assets/style/css/solution.css
+++ b/public/themes/simpleboot3/public/assets/style/css/solution.css
@@ -98,32 +98,33 @@
 	justify-content: space-between;
 }
 .target_list .item{
-	width: 40%;
+	width: calc(50% - 40px);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	margin-top: 1.071429rem;
 }
 .item_target_item_left{
-	width: 46%;
-	height: 3.053571rem;
+	width: 5.35rem;
+	/* height: 3.03rem; */
+	margin-right: 0.35rem;
 }
 .item_target_item_left img{
 	width: 100%;
 }
 .target .content{
-	width: 52%;
+	width: 6rem;
 }
 .target .content .content_top{
 	color: rgba(51, 51, 51, 1);
-	font-size: 0.357143rem;
+	font-size: 0.35rem;
 	text-align: left;
 	font-weight: bold;
 }
 .target .content .content_des{
-	margin-top: 0.392857rem;
+	margin-top:0.39rem;
 	width: 100%;
-	line-height: 0.535714rem;
+	line-height: 0.53rem;
 	color: rgba(102, 102, 102, 1);
 	font-size: 0.25rem;
 	text-align: justify;
@@ -165,9 +166,10 @@
 	background: #FAFAFA;
 	text-align: center;
 	border-radius: 0.089286rem;
+	justify-content: center;
 }
 .substance_list .item img{
-	margin-left: 2.142857rem;
+	/* margin-left: 2.142857rem; */
 	width: 1.071429rem;
 	height: 1.071429rem;
 }
@@ -179,6 +181,10 @@
 	font-weight: bold;
 }
 /* 我们的优势 */
+.solution .solution-advantage-box{
+	background: url(../imgs/solution/advance_bg.png) center center no-repeat;
+	background-size: cover;
+}
 .solution .solution_advantage{
 	padding: 1.785714rem 4.375rem 1.517857rem 4.375rem;
 	display: flex;
@@ -465,7 +471,7 @@
 	}
 	.target_list .item .item_target_item_left img{
 		width: 100%;
-		height: 12.93rem;
+		/* height: 12.93rem; */
 		border-radius: 0.33rem;
 	}
 	.target .content{
@@ -710,5 +716,8 @@
 		text-align: center;
 		margin-top: 1.33rem;
 	}
-	
+	/* .solution .solution-advantage-box{
+		background: url(../imgs/solution/advance_phone_bg.png) center center no-repeat;
+		background-size: 100% 100%;
+	} */
 }
