--- a/public/themes/simpleboot3/public/assets/style/css/product.css
+++ b/public/themes/simpleboot3/public/assets/style/css/product.css
@@ -34,7 +34,8 @@
 
 /* 客户的难题 */
 .product .problem {
-    padding: 1.785714rem 4.375rem 1.785714rem 4.375rem;
+	padding: 1.78rem 0;
+   /* padding: 1.785714rem 4.375rem 1.785714rem 4.375rem; */
     background-color: #FAFAFA;
     display: flex;
     align-items: center;
@@ -97,8 +98,12 @@
 }
 /* 我们的产品 */
 .ourproduct{
-	padding: 1.785714rem 4.375rem 1.785714rem 4.375rem;
+	padding: 1.78rem 0;
+	/* padding: 1.785714rem 4.375rem 1.785714rem 4.375rem; */
 	background-color: #FFFFFF;
+	
+}
+.ourproduct .inner{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -160,13 +165,15 @@
 }
 /* 我们的优势 */
 .ouradvantage{
-	background-image: url(../imgs/solution/resolve3.png);
+	background-image: url(../imgs/product/advance_bg.png);
 	background-repeat: no-repeat;
 	background-size: cover;
+	
 }
 .ouradvantage_content{
-	padding: 1.785714rem 4.375rem 1.785714rem 4.375rem;
-	background-color: rgba(250, 250, 250, 1);
+	padding: 1.78rem 0;
+	/* padding: 1.785714rem 4.375rem 1.785714rem 4.375rem; */
+	/* background-color: rgba(250, 250, 250, 1); */
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -239,8 +246,10 @@
 
 /* 我们的价值 */
 .ourvalue{
-	padding: 1.79rem 4.375rem 1.79rem 4.375rem;
+	padding: 1.78rem 0;
 	background-color: #FFFFFF;
+}
+.ourvalue .inner{
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -322,8 +331,11 @@
 }
 /* 以人为本 */
 .getresolve{
-	padding: 1.79rem 11.0rem 1.79rem 11.0rem;
+	padding: 1.78rem;
 	display: flex;
+	
+}
+.getresolve .inner{
 	flex-direction: column;
 	align-items: center;
 	background-color: #FFFFFF
@@ -341,7 +353,8 @@
     text-align: center;
 }
 .getresolve button{
-	margin-top: 1.43rem;
+	display: block;
+	margin: 1.43rem auto 0; 
 	width: 3.8rem;
 	height: 0.96rem;
 	line-height: 0.96rem;
@@ -379,7 +392,7 @@
 	
 	/* 客户的难题 */
 	.product .problem {
-	    padding: 2rem 1rem 2rem 1rem;
+	    padding: 2rem 0;
 	    background-color: #FAFAFA;
 	    display: flex;
 	    align-items: center;
@@ -515,7 +528,7 @@
 		background-size: cover;
 	}
 	.ouradvantage_content{
-		padding: 2rem 1rem 0 1rem;
+		padding: 2rem 0 0;
 		background-color: rgba(250, 250, 250, 1);
 		display: flex;
 		align-items: center;
@@ -592,7 +605,7 @@
 	
 	/* 我们的价值 */
 	.ourvalue{
-		padding: 2rem 1rem 2rem 1rem;
+		padding: 2rem 0;
 		background-color: #FFFFFF;
 		display: flex;
 		align-items: center;
@@ -660,7 +673,7 @@
 	}
 	/* 以人为本 */
 	.getresolve{
-		padding: 2rem 1rem 2rem 1rem;
+		padding: 2rem 0;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
